2. Что такое TDD? [#4918 #299838]